Fix the size of the editor when the editor is initially hidden and later becomes visible (#29)

--- a/src/scss/_editor.scss
+++ b/src/scss/_editor.scss
@@ -63,9 +63,7 @@ $line-height--quote: 40px;
 
   &__dashboard {
     display: flex;
-    max-height: 0;
     padding: 0 5px;
-    overflow: hidden;
 
     &__button {
       border-radius: 8px;
@@ -249,5 +247,3 @@ $line-height--quote: 40px;
     padding-left: 20px;
   }
 }
-
-.test { display: none; }
